--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
                         
                         I also used KDE plots to examine apartment density across the city and within individual neighborhoods. Lastly, I built predictive models to estimate rental prices based on square footage and coordinates, testing several modeling approaches.
                         
-                        The project concluded with insights on where a newly graduated bioscientist (like myself) might find affordable housing in Jacksonville.</p>
+                        The project concluded with insights on where the average citizen of this area might find affordable housing in Jacksonville.</p>
                 </div>
                 <div class="stackCard">
                     <div class="Tab">
