added citrus tags repo link

--- a/projects.html
+++ b/projects.html
@@ -98,6 +98,8 @@
                 <div class="textCard">
                     <H1 class="textCardTitle">Automated Image-Based Recognition of Orange Tree ID Tags Using CNNs and OCR</H1>
                     <p class = textCardBody>In this project, I developed an automated system to recognize and catalog ID tags on orange trees using Convolutional Neural Networks (CNNs) and Optical Character Recognition (OCR). The main challenge was to create an efficient, scalable solution for identifying small, often weathered tags amidst complex outdoor environments. By leveraging a VGG16 architecture, pre-trained on ImageNet and fine-tuned for the task, I was able to achieve high accuracy in image classification.</p>
+                    <a href="https://github.com/BryceBarrineau/Citrus-Tag-Reader" target="_blank" class="githubLink">🔗 View on GitHub</a>
+
                 </div>
                 <div class="stackCard">
                     <div class="Tab">
