added apartments repo link

--- a/projects.html
+++ b/projects.html
@@ -24,6 +24,8 @@
                         I also used KDE plots to examine apartment density across the city and within individual neighborhoods. Lastly, I built predictive models to estimate rental prices based on square footage and coordinates, testing several modeling approaches.
                         
                         The project concluded with insights on where the average citizen of this area might find affordable housing in Jacksonville.</p>
+                    <a href="https://github.com/BryceBarrineau/Apartments" target="_blank" class="githubLink">🔗 View on GitHub</a>
+
                 </div>
                 <div class="stackCard">
                     <div class="Tab">
